auth0 inserts to db

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,12 +35,12 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
 /* for auth0 */
-.navbar {
+/* .navbar {
   list-style-type: none;
   margin: 0;
   padding: 0;
   display: inline;
 
-}
+} */
