--- a/front-end/src/components/Join/Join.css
+++ b/front-end/src/components/Join/Join.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
     font-family: 'Roboto', sans-serif;
     padding: 0;
     margin: 0;
@@ -66,4 +66,4 @@ html, body {
 
 button:focus {
     outline: 0;
-}
+} */
