bugs fixed and functionality of other components

--- a/front-end/src/Main.scss
+++ b/front-end/src/Main.scss
@@ -11,3 +11,8 @@
     border: none;
     outline: none !important;
 }
+.btog {
+    background: transparent;
+    border: none;
+    outline: none !important;
+}
