--- a/front-end/src/components/Chat/Chat.css
+++ b/front-end/src/components/Chat/Chat.css
@@ -1,4 +1,4 @@
-/* .outerContainer {
+/* .outer {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -6,7 +6,7 @@
     background-color: #1A1A1D;
 }
 
-.container {
+.chat-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -17,18 +17,19 @@
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
-    .outerContainer {
+    .outer {
         height: 100%;
     }
 
-    .container {
+    .chat-container {
         width: 100%;
         height: 100%;
     }
 }
 
 @media (min-width: 480px) and (max-width: 1200px) {
-    .container {
+    .chat-container {
         width: 60%;
     }
 } */
+
