--- a/front-end/src/components/Join/Join.css
+++ b/front-end/src/components/Join/Join.css
@@ -1,3 +1,57 @@
+.heading-chat {
+    color: white;
+    font-size: 2.5em;
+    padding-bottom: 10px;
+    border-bottom: 2px solid white;
+    font-family: 'Abril Fatface';
+}
+
+.joinOuterContainer {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    height: 100vh;
+    align-items: center;
+    background-color: #000000; /* #1A1A1D */
+}
+
+.button-chat {
+    color: #fff !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #ed6f2f;
+    padding: 20px;
+    border-radius: 5px;
+    display: inline-block;
+    border: none;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.button-chat:focus {
+    outline: 0;
+}
+
+.joinInnerContainer {
+    width: 25%;
+}
+.joinInput {
+    border-radius: 0;
+    padding: 15px 20px;
+    width: 100%;
+    margin-top: 10px;
+    border-style: none;
+}
+
+/* 
+.joinOuterContainer {
+        height: 100%;
+    } */
+
+/* .joinInnerContainer {
+        width: 20%;
+    } */
+
 /* html, body {
     font-family: 'Roboto', sans-serif;
     padding: 0;
@@ -31,14 +85,14 @@
     width: 100%;
 }
 
-.heading {
+.heading-chat {
     color: white;
     font-size: 2.5em;
     padding-bottom: 10px;
     border-bottom: 2px solid white;
 }
 
-.button {
+.button-chat {
     color: #fff !important;
     text-transform: uppercase;
     text-decoration: none;
@@ -64,6 +118,7 @@
     }
 }
 
-button:focus {
+button-chat:focus {
     outline: 0;
 } */
+
